--- a/Heat/Heat.csproj
+++ b/Heat/Heat.csproj
@@ -82,7 +82,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Heat.cs" />
+    <Compile Include="BagSystem.cs" />
+    <Compile Include="Dryfire.cs" />
+    <Compile Include="Main.cs" />
+    <Compile Include="HeatSettings.cs" />
+    <Compile Include="ToggleClothing.cs" />
+    <Compile Include="RelaxedDrivingStyle.cs" />
+    <Compile Include="Heat_old.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
